syntax = "proto3";

option go_package = "github.com/gogurt-rpc/proto";

package gogurt;

service GogurtVendor {
  rpc GetGogurt(GetGogurtRequest) returns (Gogurt) {}
}

message GetGogurtRequest {}

message Gogurt {
  int32 size = 1;
  string flavor = 2;
  int32 remaining = 3;
  bool open = 4;
}
